Setup release procedure

--- a/common-spring/pom.xml
+++ b/common-spring/pom.xml
@@ -16,13 +16,15 @@
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>common-spring</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
 	<parent>
 		<groupId>com.foreach.libs</groupId>
 		<artifactId>common-projects</artifactId>
-		<version>2.0.0-SNAPSHOT</version>
+		<version>${revision}</version>
 	</parent>
+
+	<artifactId>common-spring</artifactId>
+	<name>${project.groupId}:${project.artifactId}</name>
+
 	<dependencies>
 
 		<dependency>
