--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,6 @@
 variables:
   MAVEN_REPO_DIR: $CI_PROJECT_DIR/.m2/repository
   MAVEN_IMAGE: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/maven:3.9-eclipse-temurin-8
-  DOCKER_COMPOSE_IMAGE: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/docker/compose
   MAVEN_OPTS: >-
     -Xmx256m
     -Dhttps.protocols=TLSv1.2
@@ -16,15 +15,6 @@ variables:
     --fail-at-end
     --show-version
     --no-transfer-progress
-  DOCKER_HOST: "tcp://docker:2375"
-  DOCKER_TLS_CERTDIR: ""
-  DOCKER_DRIVER: overlay2
-  BUILD_VERSION: ${CI_COMMIT_REF_NAME}-${CI_PIPELINE_ID}
-  RELEASE_VERSION: ${BUILD_VERSION}
-
-services:
-  - name: docker:dind
-    command: [ "--tls=false" ]
 
 workflow:
   rules:
@@ -32,18 +22,20 @@ workflow:
     - if: $CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS
       when: never
     - if: $CI_COMMIT_BRANCH
+    - if: $CI_COMMIT_TAG =~ /^v.*/
 
 stages:
-  - test-build
+  - test
   - deploy
+
+image: ${MAVEN_IMAGE}
 
 cache:
   paths:
     - $MAVEN_REPO_DIR
 
 utest:backend:
-  stage: test-build
-  image: ${MAVEN_IMAGE}
+  stage: test
   script:
     - 'mvn $MAVEN_CLI_OPTS verify'
   artifacts:
@@ -54,16 +46,45 @@ utest:backend:
 
 .deploy:
   stage: deploy
-  image: ${MAVEN_IMAGE}
-  rules:
-    - when: always
-  needs:
-    - utest:backend
+  variables:
+    TZ: "UTC" # Generally recommended for reproducible builds
+  before_script:
+    - if [[ -f ci-before.sh ]]; then ./ci-before.sh; fi
+    - apt-get update
+    - apt-get -y install gpg
+    - gpg --pinentry-mode loopback --passphrase $MAVEN_GPG_PASSPHRASE --import $MAVEN_GPG_PRIVATE_KEY
+    - gpg --list-keys
   script:
-    - 'mvn $MAVEN_CLI_OPTS clean compile deploy -DskipTests=true -Pforeach -Dmaven.wagon.http.ssl.insecure=true -Dmaven.wagon.http.ssl.allowall=true -Dmaven.wagon.http.ssl.ignore.validity.dates=true'
+    # For reproducible builds, we have to run the build twice:
+    - mvn $MAVEN_CLI_OPTS clean install -DskipTests
+    - mvn $MAVEN_CLI_OPTS clean verify artifact:compare -DskipTests
+    - mvn $MAVEN_CLI_OPTS --activate-profiles deploy,$MAVEN_PROFILE deploy -DskipTests
 
-deploy:snapshot:
+# This job is triggered only on a branch push, and:
+# - When the pom.xml revision is set to a snapshot, this publishes to the internal snapshot repo
+# - When the pom.xml revision is set to a release, this publishes to the internal releases repo
+deploy:foreach:
   extends:
     - .deploy
-  environment:
-    name: snapshot
+  variables:
+    MAVEN_PROFILE: foreach
+  rules:
+    - if: $CI_COMMIT_TAG == null
+
+# This job is triggered only on a tag push, and:
+# - A tag MUST NOT be pushed when the pom.xml revision is a snapshot
+# - This publishes the release to Maven Central
+deploy:sonatype:
+  extends:
+    - .deploy
+  variables:
+    MAVEN_PROFILE: sonatype
+  rules:
+    - if: $CI_COMMIT_TAG =~ /^v.*/
+
+# So the release procedure consists of:
+# 1. Change the revision in the top-level pom.xml and commit.
+# 2. Push to the remote. This will trigger the deploy:foreach job
+# 3. When the deploy:foreach job is successful, create a tag (format: the letter v followed by the revision property).
+#    This will trigger the release to Maven Central
+# 4. Close, release and drop the staging repository at https://oss.sonatype.org/#stagingRepositories
