--- a/common-concurrent/pom.xml
+++ b/common-concurrent/pom.xml
@@ -15,14 +15,15 @@
   ~ limitations under the License.
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>common-projects</artifactId>
         <groupId>com.foreach.libs</groupId>
-	    <version>2.0.0-SNAPSHOT</version>
+	    <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>common-concurrent</artifactId>
+	<name>${project.groupId}:${project.artifactId}</name>
 
 	<dependencies>
 		<dependency>
@@ -65,4 +66,5 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
 </project>
