--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -18,11 +18,13 @@
 	<parent>
 		<artifactId>common-projects</artifactId>
 		<groupId>com.foreach.libs</groupId>
-		<version>2.0.0-SNAPSHOT</version>
+		<version>${revision}</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>common-test</artifactId>
+	<name>${project.groupId}:${project.artifactId}</name>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -43,4 +45,5 @@
 			<artifactId>mockito-core</artifactId>
 		</dependency>
 	</dependencies>
+
 </project>
