--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,16 @@ variables:
     --fail-at-end
     --show-version
     --no-transfer-progress
+  DOCKER_VERSION: "24.0"
+  DOCKER_HOST: "tcp://docker:2375"
+  DOCKER_TLS_CERTDIR: ""
+  DOCKER_DRIVER: overlay2
+  # https://java.testcontainers.org/features/image_name_substitution/
+  # Note that this requires logging in into the GitLab Docker Registry
+  # Note that the GitLab Docker Registry only caches the Docker Hub repository,
+  # so for instance Azurite isn't cached. testcontainers handles this transparently.
+  # TODO: Better yet: use Harbor
+  TESTCONTAINERS_HUB_IMAGE_NAME_PREFIX: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/
 
 workflow:
   rules:
@@ -36,6 +46,15 @@ cache:
 
 utest:backend:
   stage: test
+  # We need Docker for the testcontainers used in common-file-repository
+  services:
+    - name: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/docker:${DOCKER_VERSION}-dind
+      alias: docker
+      command: [ "--tls=false" ]
+  before_script:
+    - apt-get update
+    - apt-get -y install docker.io
+    - docker login -u $CI_DEPENDENCY_PROXY_USER -p $CI_DEPENDENCY_PROXY_PASSWORD $CI_DEPENDENCY_PROXY_SERVER
   script:
     - 'mvn $MAVEN_CLI_OPTS verify'
   artifacts:
