--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,8 @@
 		<module>common-test</module>
 		-->
 		<module>common-concurrent</module>
-		<module>common-file-repository-test-utils</module>
-		<module>common-file-repository</module>
+		<module>common-file-manager-test-utils</module>
+		<module>common-file-manager</module>
 		<module>file-manager-module</module>
 	</modules>
 
@@ -177,12 +177,12 @@
 			</dependency>
 			<dependency>
 				<groupId>com.foreach.libs</groupId>
-				<artifactId>common-file-repository</artifactId>
+				<artifactId>common-file-manager</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.foreach.libs</groupId>
-				<artifactId>common-file-repository-test-utils</artifactId>
+				<artifactId>common-file-manager-test-utils</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
