--- a/common-spring/pom.xml
+++ b/common-spring/pom.xml
@@ -25,6 +25,11 @@
 	<artifactId>common-spring</artifactId>
 	<name>${project.groupId}:${project.artifactId}</name>
 
+	<properties>
+		<maven.javadoc.skip>false</maven.javadoc.skip>
+		<maven.deploy.skip>false</maven.deploy.skip>
+	</properties>
+
 	<dependencies>
 
 		<dependency>
