--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -25,6 +25,11 @@
 	<artifactId>common-test</artifactId>
 	<name>${project.groupId}:${project.artifactId}</name>
 
+	<properties>
+		<maven.javadoc.skip>false</maven.javadoc.skip>
+		<maven.deploy.skip>false</maven.deploy.skip>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
