--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,13 @@
 		<!--
 		<module>file-manager-module</module>
 		-->
+		<module>common-bom</module>
 	</modules>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.javadoc.skip>true</maven.javadoc.skip>
+		<maven.deploy.skip>true</maven.deploy.skip>
 
 		<revision>2.0-SNAPSHOT</revision>
 
