--- a/common-concurrent/pom.xml
+++ b/common-concurrent/pom.xml
@@ -14,15 +14,16 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-    <parent>
-        <artifactId>common-projects</artifactId>
-        <groupId>com.foreach.libs</groupId>
-	    <version>${revision}</version>
-    </parent>
+	<parent>
+		<artifactId>common-projects</artifactId>
+		<groupId>com.foreach.libs</groupId>
+		<version>${revision}</version>
+	</parent>
 
-    <artifactId>common-concurrent</artifactId>
+	<artifactId>common-concurrent</artifactId>
 	<name>${project.groupId}:${project.artifactId}</name>
 
 	<properties>
@@ -44,10 +45,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.liquibase</groupId>
