Use Nexus repositories:
- public for downloading dependencies
- releases-public and snapshots-public for publishing artifacts

--- a/common-bom/pom.xml
+++ b/common-bom/pom.xml
@@ -87,6 +87,7 @@
 						<parent>remove</parent>
 						<properties>remove</properties>
 						<build>remove</build>
+						<repositories>remove</repositories>
 					</pomElements>
 				</configuration>
 			</plugin>
