--- a/pom.xml
+++ b/pom.xml
@@ -339,6 +339,14 @@
 		</developer>
 	</developers>
 
+	<repositories>
+		<repository>
+			<id>across</id> <!-- Don't try changing this -->
+			<name>Foreach Nexus Public</name>
+			<url>https://repository.antwerpen.io-external.com/nexus/repository/public/</url>
+		</repository>
+	</repositories>
+
 	<profiles>
 		<profile>
 			<id>deploy</id>
@@ -452,12 +460,12 @@
 				<repository>
 					<id>foreach-nexus</id>
 					<name>Foreach nexus</name>
-					<url>https://repository.antwerpen.io-external.com/nexus/repository/releases/</url>
+					<url>https://repository.antwerpen.io-external.com/nexus/repository/releases-public/</url>
 				</repository>
 				<snapshotRepository>
 					<id>foreach-nexus</id>
 					<name>Foreach nexus</name>
-					<url>https://repository.antwerpen.io-external.com/nexus/repository/snapshots/</url>
+					<url>https://repository.antwerpen.io-external.com/nexus/repository/snapshots-public/</url>
 				</snapshotRepository>
 			</distributionManagement>
 		</profile>
