--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
 		<maven.javadoc.skip>true</maven.javadoc.skip>
 		<maven.deploy.skip>true</maven.deploy.skip>
 
-		<revision>3.0.0</revision>
+		<revision>3.0-SNAPSHOT</revision>
 
 		<!-- Overrides from Spring Boot: -->
 		<maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
